# sql-haystack

./: .gitignore  LICENSE  load_data.py  main.py  pyproject.toml  schema.sql
app/: main.py
app/adapter/agents/: sql_query.py
app/adapter/database/: connection.py
app/core/: settings.py
app/domain/chat/: agent.py  prompt.py
